--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/rent-hub/",
               "budgets": [
                 {
                   "type": "initial",
