--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
           },
           "configurations": {
             "production": {
+              "outputPath": "dist/rent-hub",
               "baseHref": "/rent-hub/",
               "budgets": [
                 {
